--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//npm.pkg.github.com/:_authToken=TOKEN
-registry=https://npm.pkg.github.com/USERNAME
+//npm.pkg.github.com/:_authToken=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
+registry=https://npm.pkg.github.com/svetlanagreenfox
